[gd_scene load_steps=6 format=3 uid="uid://dqjf7xe6278u7"]

[ext_resource type="Script" path="res://Entities/player.gd" id="1_66pwa"]
[ext_resource type="Material" uid="uid://demvvkrlb5k7r" path="res://Materials/blue.tres" id="2_86vdo"]

[sub_resource type="SphereShape3D" id="SphereShape3D_u54bi"]
radius = 0.83754

[sub_resource type="BoxMesh" id="BoxMesh_ki6ae"]
material = ExtResource("2_86vdo")
size = Vector3(0.5, 1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_qutdp"]
size = Vector3(0.5, 1, 0.5)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 4
script = ExtResource("1_66pwa")

[node name="PickupField" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 10
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupField"]
shape = SubResource("SphereShape3D_u54bi")

[node name="PickupPos" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_ki6ae")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_qutdp")

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="PickupField" to="." method="_on_pickup_field_area_entered"]
[connection signal="area_exited" from="PickupField" to="." method="_on_pickup_field_area_exited"]
[connection signal="body_entered" from="PickupField" to="." method="_on_pickup_field_body_entered"]
[connection signal="body_exited" from="PickupField" to="." method="_on_pickup_field_body_exited"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_pickup_timer_timeout"]
